--- a/Tweak/ControlCenter/Makefile
+++ b/Tweak/ControlCenter/Makefile
@@ -1,6 +1,7 @@
 BUNDLE_NAME = PuckToggle
 $(BUNDLE_NAME)_BUNDLE_EXTENSION = bundle
 $(BUNDLE_NAME)_FILES = PuckToggle.m
+$(BUNDLE_NAME)_EXTRA_FRAMEWORKS = Cephei
 $(BUNDLE_NAME)_PRIVATE_FRAMEWORKS = ControlCenterUIKit
 $(BUNDLE_NAME)_INSTALL_PATH = /Library/ControlCenter/Bundles/
 ADDITIONAL_CFLAGS += -DTHEOS_LEAN_AND_MEAN
